Revision history for Perl extension TAP::Formatter::JUnit.

0.09    ???

0.08    Thu Jul 15 23:44 PDT 2010
    - RT#58838, "Error reporting on die or missing plan".  Thanks to Colin
      Robertson.  Output compatible w/Hudson (so it now sees these as errors).
    - RT#59206, "Plan/Tests Mismatch".  Thanks for Phillip Kimmey.  JUnit
      output now reports mismatches with an "<error>" so Hudson detects it.

0.07    Fri Jan 29 23:23 PST 2010
    - Fix RT#53927, "Times reported by T:F:JUnit for individual test cases in
      a .t file are incorrect".  Thanks to Marc Abramowitz.

0.06    Wed Jan 13 21:24 PST 2010
    - Fix bug in tap2junit which would cause multiple TAP streams to have the
      *same* name in their output JUnit XML.  Introduced in 0.04.

0.05    Wed Jan 13 16:32 PST 2010
    - Add support for ALLOW_PASSING_TODOS environment variable, which forces
      T:F:JUnit to treat passing TODOs as a "pass" and not a "fail" condition.
      Thanks to Joe McMahon.
    - Removed need for Test::Output; I forgot that you can pass a FH directly
      in to TAP::Harness.  Doh!

0.04    Wed Jan 13 15:51 PST 2010
    - extra escaping/cleanup of characters before inserting them into the XML
      stream, to keep JUnit parsers like Hudson's from choking.  Thanks go out
      to Joe McMahon and Michael Nachbaur for prodding to get this fixed and
      for patches.
    - new "--name" option for tap2junit, allowing for tests to be explicitly
      named.  Aliased to "--junit_name" to provide compatibility with patch
      from Joe McMahon.
    - tap2junit can now filter stdin/stdout; use "-" as the filename.  Thanks
      to Joe McMahon for the original patch on which this is based
    - switch unit tests to use Test::Output for capturing output, instead of
      trying to run "prove" directly
    - update unit tests to run against "blib/lib" and "blib/script" instead
      of just "lib" and "bin"

0.03    Sun Dec 13 22:36 PST 2009